show info popup

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -132,6 +132,10 @@ h3 {
   display: inline;
 }
 
+.info_icon {
+  position: relative;
+}
+
 /* the following definisitons will change the color of the letter accordingly to the logic */
 
 .elsewhere {
